--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
     </style>
 </head>
-<body class="min-h-screen flex items-center justify-center p-4 subtle-pattern">
+<body class="min-h-screen flex items-center justify-center p-4 subtle-pattern" style="background-color: #abf3ab;"></body>>
     <!-- Meadow Background Lines - Desktop Only -->
     <div class="meadow-lines">
         <svg width="100%" height="100%" viewBox="0 0 1200 800" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
